// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/System/GlobalSetting render api return no data 1`] = `
<body>
  <div>
    <section
      class="system-form-wrapper"
    >
      <div
        class="ant-row ant-row-space-between ant-row-middle config-title-wrapper has-border css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            全局配置
          </div>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  操作记录过期时间(小时)
                </div>
              </div>
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                -
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-geipcv"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="edit-2-fill"
                      >
                        <path
                          d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                          fill="#8A8F99"
                          id="Vector"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  URL地址前缀
                </div>
                <div
                  class="tips"
                >
                  配置能访问SQLE的url地址信息, 格式为 http(s)://ip:port/sqle 
                </div>
              </div>
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                -
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-geipcv"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="edit-2-fill"
                      >
                        <path
                          d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                          fill="#8A8F99"
                          id="Vector"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`base/System/GlobalSetting render snap 1`] = `
<body>
  <div>
    <section
      class="system-form-wrapper"
    >
      <div
        class="ant-row ant-row-space-between ant-row-middle config-title-wrapper has-border css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            全局配置
          </div>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </div>
        </div>
        <div
          class="ant-spin-container ant-spin-blur"
        >
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  操作记录过期时间(小时)
                </div>
              </div>
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                -
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-geipcv"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="edit-2-fill"
                      >
                        <path
                          d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                          fill="#8A8F99"
                          id="Vector"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  URL地址前缀
                </div>
                <div
                  class="tips"
                >
                  配置能访问SQLE的url地址信息, 格式为 http(s)://ip:port/sqle 
                </div>
              </div>
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                -
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-geipcv"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="edit-2-fill"
                      >
                        <path
                          d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                          fill="#8A8F99"
                          id="Vector"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`base/System/GlobalSetting render snap 2`] = `
<body>
  <div>
    <section
      class="system-form-wrapper"
    >
      <div
        class="ant-row ant-row-space-between ant-row-middle config-title-wrapper has-border css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            全局配置
          </div>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  操作记录过期时间(小时)
                </div>
              </div>
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                3161
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-geipcv"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="edit-2-fill"
                      >
                        <path
                          d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                          fill="#8A8F99"
                          id="Vector"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  URL地址前缀
                </div>
                <div
                  class="tips"
                >
                  配置能访问SQLE的url地址信息, 格式为 http(s)://ip:port/sqle 
                </div>
              </div>
            </div>
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                http://demo.com
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-geipcv"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="edit-2-fill"
                      >
                        <path
                          d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                          fill="#8A8F99"
                          id="Vector"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
